--- a/logo.css
+++ b/logo.css
@@ -1,7 +1,7 @@
-header.logo > a {
-    padding: 0;
+header .logo > a {
+    text-decoration: none;
 
 }
-header.logo{
+header .logo{
     float: left;
 }
