--- a/logo.css
+++ b/logo.css
@@ -1,5 +1,8 @@
 header .logo > a {
     text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #fff;
 
 }
 header .logo{
