--- a/logo.css
+++ b/logo.css
@@ -5,6 +5,10 @@ header .logo > a {
     color: #fff;
 
 }
-header .logo{
+header .logo > a:hover {
+    color: orange;
+}
+
+header .logo .hover{
     float: left;
 }
