--- a/footer.css
+++ b/footer.css
@@ -1,4 +1,10 @@
 footer {
     background: linear-gradient(135deg, #2a3d4a, #111a20); /* contrast color */;
     padding: 50px 20px 20px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.footer-container {
+    display: grid;
+    gap: 40px;
 }
