--- a/footer.css
+++ b/footer.css
@@ -6,5 +6,6 @@ footer {
 
 .footer-container {
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 40px;
 }
