made changes to css file

--- a/footer.css
+++ b/footer.css
@@ -2,6 +2,7 @@ footer {
     background: linear-gradient(135deg, #2a3d4a, #111a20); /* contrast color */;
     padding: 50px 20px 20px;
     font-family: 'Poppins', sans-serif;
+    color: white;
 }
 
 .footer-container {
