--- a/footer.css
+++ b/footer.css
@@ -7,5 +7,7 @@ footer {
 
 .footer-container {
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 40px;
+    max-width: 1100px;
 }
