--- a/footer.css
+++ b/footer.css
@@ -10,4 +10,5 @@ footer {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 40px;
     max-width: 1100px;
+    margin-inline-start: 130px;
 }
