made changes to css file

--- a/footer.css
+++ b/footer.css
@@ -24,3 +24,10 @@ footer {
     font-size: 14px;
     line-height: 1.5;
 }
+
+.footer-contacts h3, 
+.footer-links h3 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: orange;
+}
