--- a/footer.css
+++ b/footer.css
@@ -36,3 +36,9 @@ footer {
     list-style: none;
     padding: 0px;
 }
+
+.footer-links ul li a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s;
+}
