--- a/footer.css
+++ b/footer.css
@@ -37,6 +37,10 @@ footer {
     padding: 0px;
 }
 
+.footer-links ul li {
+    margin-bottom: 10px;
+}
+
 .footer-links ul li a {
     color: white;
     text-decoration: none;
