--- a/footer.css
+++ b/footer.css
@@ -60,3 +60,9 @@ footer {
     margin-right: 10px;
     color: orange;
 }
+
+.footer-socials a {
+    color: white;
+    font-size: 20px;
+    margin-right: 15px;
+}
