--- a/footer.css
+++ b/footer.css
@@ -67,3 +67,8 @@ footer {
     margin-right: 15px;
     transition: transform 0.3s, color 0.3s ease;
 }
+
+.footer-socials a:hover {
+    color: orange;
+    transform: scale(1.2);
+}
