--- a/footer.css
+++ b/footer.css
@@ -77,4 +77,6 @@ footer {
     text-align: center;
     font-size: 13px;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
+    padding-top: 15px;
+    margin-top: 30px;
 }
