--- a/footer.css
+++ b/footer.css
@@ -80,3 +80,10 @@ footer {
     padding-top: 15px;
     margin-top: 30px;
 }
+
+@media (max-width: 600px) {
+    footer {
+        text-align: center;
+}
+
+}
